--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -254,6 +254,14 @@
                                         v-html="item.nivel3"></option>
                             </select>
                         </div>
+
+                        <label for="inputName" class="col-md-2 form-label">SUGERENCIA CX88</label>
+                        <div class="col-md-4 col-informacion">
+                            <select class="form-control form-select select2" v-model="seguimiento.sugerencia_cx88" id="sugerencia_cx88" v-autoname>
+                                <option value="SI">SI</option>
+                                <option value="NO">NO</option>
+                            </select>
+                        </div>
                     </div>
 
                     <div id="div_fecha_compromiso_pago">
