--- a/views/reportes/individual.twig
+++ b/views/reportes/individual.twig
@@ -28,7 +28,7 @@
 						<tbody>
 						<tr v-for="d in datos">
 							<td style="text-align: center;" v-html="d.gestor"></td>
-                            <td style="text-align: center;" v-html="d.cierre_efectivo"></td>
+                            <td style="text-align: center;" v-html="d.total_negociaciones"></td>
                             <td style="text-align: center;" v-html="d.refinancia"></td>
                             <td style="text-align: center;" v-html="d.notificado"></td>
                             <td style="text-align: center;" v-html="d.contactabilidad"></td>
