--- a/views/reportes/baseCarga.twig
+++ b/views/reportes/baseCarga.twig
@@ -75,7 +75,7 @@
 							<td v-html="d.nivel_1_texto"></td>
 							<td v-html="d.nivel_3_texto"></td>
 							<td v-html="d.observaciones"></td>
-							<td v-html="d.fecha_compromiso_pago"></td>
+							<td v-html="d.fecha_compromiso_pago_format"></td>
 							<td v-html="d.ultimo_telefono_contacto"></td>
 							<td v-html="d.area_usuario"></td>
 							<td v-html="d.nivel_1_motivo_no_pago_texto"></td>
