--- a/views/reportes/contactabilidad.twig
+++ b/views/reportes/contactabilidad.twig
@@ -128,6 +128,22 @@
                             theme: "classic",
                             initSelection: function(element, callback) {}
                         });
+                        $("#hora_inicio").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#minuto_inicio").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#hora_fin").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#minuto_fin").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
                         $("#campana").select2({
                             theme: "classic",
                             initSelection: function(element, callback) {}
